--- a/Shopping.WPFClient/Views/ShellView.xaml
+++ b/Shopping.WPFClient/Views/ShellView.xaml
@@ -8,7 +8,24 @@
         mc:Ignorable="d"
         Title="ShellView" Height="450" Width="800">
     <Grid>
-        <Frame 
-            Source="CustomersView.xaml" />
+
+
+        <DockPanel>
+
+            <Menu DockPanel.Dock="Top">
+                <MenuItem Header="Views">
+
+                    <MenuItem Header="Show customers" 
+                              Command="{Binding ShowCustomersCommand}" 
+                              CommandParameter="Customers" />
+
+                </MenuItem>
+            </Menu>
+
+            <Frame Name="ContentFrame"  NavigationUIVisibility="Hidden" />
+
+        </DockPanel>
+        
+       
     </Grid>
 </Window>
